Add experience entry for Eternal Robotics
Added experience entry for Eternal Robotics with details about the OCR pipeline and GUI tool.

--- a/index.html
+++ b/index.html
@@ -473,6 +473,19 @@
       <a href="#">
         <div class="experience-content-box">
           <div class="experience-logo-wrapper">
+            <img class="experience-logo-box" src="./assets/images/eternal_robotics_logo.jpg" alt="Mowito logo" width="60">
+          </div>
+          <h4 class="h4 experience-item-title"><b>Eternal Robotics</b></h4>
+          <p class="experience-item-text">
+            Interned at Eternal Robotics where I built a 95% accurate OCR pipeline for industrial labels and developed a custom GUI tool that significantly improved image correction and automation efficiency by 40%.
+          </p>
+        </div>
+      </a>
+    </li>
+    <li class="experience-item">
+      <a href="#">
+        <div class="experience-content-box">
+          <div class="experience-logo-wrapper">
             <img class="experience-logo-box" src="./assets/images/mowito_logo.jpg" alt="Mowito logo" width="60">
           </div>
           <h4 class="h4 experience-item-title"><b>Mowito Robotics</b></h4>
